@@ -46,6 +46,8 @@ Suggests:
  python,
  ruby,
  smartmontools,
+Replaces: munin-doc (<< 2.0.37-3)
+Breaks: munin-doc (<< 2.0.37-3)
 Description: network-wide graphing framework (node)
  Munin is a highly flexible and powerful solution used to create graphs of
  virtually everything imaginable throughout your network, while still
@@ -149,6 +151,8 @@ Depends: ${misc:Depends}, ${perl:Depends},
  rrdtool,
 Recommends: munin-node, munin-doc, libcgi-fast-perl
 Suggests: www-browser, httpd, libnet-ssleay-perl, libapache2-mod-fcgid
+Replaces: munin-doc (<< 2.0.37-3)
+Breaks: munin-doc (<< 2.0.37-3)
 Description: network-wide graphing framework (grapher/gatherer)
  Munin is a highly flexible and powerful solution used to create graphs of
  virtually everything imaginable throughout your network, while still
@@ -173,6 +177,8 @@ Architecture: all
 Depends: ${perl:Depends}, ${misc:Depends},
  adduser,
  liblist-moreutils-perl,
+Replaces: munin-doc (<< 2.0.37-3)
+Breaks: munin-doc (<< 2.0.37-3)
 Description: network-wide graphing framework (common)
  Munin is a highly flexible and powerful solution used to create graphs of
  virtually everything imaginable throughout your network, while still
