@@ -1,0 +1,1 @@
+build/doc/munin.8
