@@ -1,12 +1,0 @@
-build/doc/munin-cron.8
-build/doc/munin-html.8
-build/doc/munin-limits.8
-build/doc/munin-update.8
-build/doc/munin-check.8
-build/doc/munin.conf.5
-build/doc/munin.8
-build/doc/munin-node.conf.5
-node/blib/bindoc/munin-run.1p
-node/blib/bindoc/munindoc.1p
-node/blib/bindoc/munin-node.1p
-node/blib/bindoc/munin-node-configure.1p
