@@ -1,0 +1,5 @@
+build/doc/munin-node.conf.5
+node/blib/bindoc/munindoc.1p
+node/blib/bindoc/munin-node.1p
+node/blib/bindoc/munin-node-configure.1p
+node/blib/bindoc/munin-run.1p
