@@ -1,0 +1,6 @@
+build/doc/munin.conf.5
+build/doc/munin-check.8
+build/doc/munin-cron.8
+build/doc/munin-html.8
+build/doc/munin-limits.8
+build/doc/munin-update.8
